--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build-src": "babel src --out-file build/emblem-generator.js",
     "build-asset-generator": "babel asset-generator -d build",
-    "generate-assets": "node build/AssetGenerator.js"
+    "generate-assets": "node build/AssetGenerator.js",
+    "build-src-test": "webpack src-test"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,8 @@
     "babel-preset-es2015": "^6.24.1",
     "extract-svg-path": "^2.1.0",
     "regenerator-runtime": "^0.13.5",
-    "svg-parser": "^2.0.4"
+    "svg-parser": "^2.0.4",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
