--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "extract-svg-path": "^2.1.0",
+    "file-loader": "^6.0.0",
     "raphael": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
     "svg-parser": "^2.0.4",
